First attempt with grunt:concat

--- a/app/MyApp/index.html
+++ b/app/MyApp/index.html
@@ -30,6 +30,9 @@
       DEPENDENCIES
     -->
 
+    <script src="grunt/vendor.js"></script>
+    <!--
+
     <script src="vendor/Spin.js"></script>
     <script src="vendor/jquery-1.7.2.js"></script>
     <script src="app/raphael.js"></script>
@@ -72,6 +75,7 @@
     <script src="vendor/pbkdf2/sha1.js"></script>
     <script src="vendor/pbkdf2/pbkdf2.js"></script>
     <script src="vendor/pbkdf2/derive_key.js"></script>
+    -->
 
     <!--<script type="text/javascript" src="vendor/html5lightbox/jquery.js"></script>-->
 
@@ -87,6 +91,8 @@
 
     <!-- app-models -->
 
+    <script src="grunt/models.js"></script>
+    <!--
     <script src="app/models/Resource.js"></script>
     <script src="app/models/Group.js"></script>
     <script src="app/models/Assignment.js"></script>
@@ -123,8 +129,11 @@
     <script src="app/models/Survey.js"></script>
     <script src="app/models/Question.js"></script>
     <script src="app/models/AdminMember.js"></script>
+    -->
 
     <!-- App Collection  -->
+    <script src="grunt/collections.js"></script>
+    <!--
     <script src="app/collections/listRCollection.js"></script>
     <script src="app/collections/Groups.js"></script>
     <script src="app/collections/coursesteps.js"></script>
@@ -171,8 +180,11 @@
     <script src="app/collections/SurveyQuestions.js"></script>
     <script src="app/collections/SurveyAnswers.js"></script>
     <script src="app/collections/AdminMembers.js"></script>
+    -->
 
     <!-- app-Views -->
+    <script src="grunt/views.js"></script>
+    <!--
     <script src="app/views/ConfigurationView.js"></script>
     <script src="app/views/listSyncDbView.js"></script>
     <script src="app/views/MemberLoginForm.js"></script>
@@ -203,7 +215,6 @@
     <script src="app/views/FeedbackTable.js"></script>
     <script src="app/views/FeedbackRow.js"></script>
     <script src="app/views/FeedbackForm.js"></script>
-
 
     <script src="app/views/GroupsTable.js"></script>
     <script src="app/views/GroupRow.js"></script>
@@ -278,6 +289,7 @@
     <script src="app/views/CommunityConfigurationsForm.js"></script>
     <script src="app/views/TrendActivityReport.js"></script>
     <script src="app/views/AdminForm.js"></script>
+    -->
 
     <!-- javaScript -->
 
