Width of table for manager fixed

--- a/app/nation/index.html
+++ b/app/nation/index.html
@@ -768,26 +768,26 @@ App.Views.GroupRow
                 </td>
             </tr>
         </table>
-        <table class="table">
+        <table class="table" id="tbl">
             <tr>
-                <td>
+                <td id="tbl_box">
                     <table class="table table-striped" id="communities">
                         <th ><a  style="color:#345474" href="#listCommunity"><%= languageDict.attributes.Communities %> >></a></th>
 
                     </table>
                 </td>
-                <td >
+                <td id="tbl_box">
                     <table class="table table-striped" id="publications">
                         <th><a  style="color:#345474" href="#publication"><%= languageDict.attributes.Publications%> >></a></th>
                     </table>
                 </td>
-                <td>
+                <td id="tbl_box">
                     <table class="table table-striped" id="surveys">
                         <th ><a  style="color:#345474" href="#survey"><%= languageDict.attributes.Surveys %> >></a></th>
 
                     </table>
                 </td>
-                <td>
+                <td id="tbl_box">
                     <table class="table table-striped" id="reports">
                         <th ><a  style="color:#345474" href="#reports"><%= languageDict.attributes.Nation_reports %> >></a></th>
 
